--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,23 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
     <name>Foxes-and-rabbits-Maven</name>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>external.atlassian.jgitflow</groupId>
+                <artifactId>jgitflow-maven-plugin</artifactId>
+                <version>1.0-m5.1</version>
+                <configuration>
+                    <flowInitContext>
+                         <masterBranchName>master</masterBranchName>
+                         <developBranchName>develop</developBranchName>
+                         <featureBranchPrefix>feature-</featureBranchPrefix>
+                         <releaseBranchPrefix>release-</releaseBranchPrefix>
+                         <hotfixBranchPrefix>hotfix-</hotfixBranchPrefix>
+                         <versionTagPrefix>v</versionTagPrefix>              
+                    </flowInitContext>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>    
 </project>
