--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
                          <hotfixBranchPrefix>hotfix-</hotfixBranchPrefix>
                          <versionTagPrefix>v</versionTagPrefix>              
                     </flowInitContext>
+                    <noDeploy>true</noDeploy>
                 </configuration>
             </plugin>
         </plugins>
